# LumosInterface

./: ATTRIBUTE_SYSTEM_ARCHITECTURE.md  ATTRIBUTE_SYSTEM_IMPLEMENTATION_SUMMARY.md  COMMUNICATION_INTERFACES_GUIDE.md  CPP_GENERATOR_ARCHITECTURE.md  CPP_GENERATOR_ARCHITECTURE_SIMPLE.md  ENUM_SUPPORT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MODULE_STRUCTURE.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  README.md  README_INDENTATION.md  TODO.md  VALIDATION_ARCHITECTURE.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  indentation_preprocessor.py  main copy.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  test_all_features.py  test_attributes_simple.py  test_collections_standalone.py  test_constants_standalone.py  test_enum_validation.py  test_field_numbering_standalone.py  test_field_validation.py  test_import_resolution.py  test_imports_standalone.py  test_inline_attributes_standalone.py  test_integration.py  test_interface_standalone.py  test_multiline_strings_standalone.py  test_namespace_standalone.py  test_optional_fields_standalone.py  test_package.py  test_struct_standalone.py  test_type_aliases.py  (+2 more)
grammar/: message copy.lark  message.lark  message.lark.old  message.lark.old2
interface/: simple.msg
interface_old/: robot_interface.msg
interfaces/: simple.msg
interfaces_old/: robot_interface.msg
lumos_idl/: __init__.py  __main__.py  config.py
lumos_idl.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  run_simple_test.py  test_attribute_validation.py  test_constants.py  test_imports.py  (+2 more)
(+91 files in other folders)
